--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
     color: #ffffff;
 }
 
-header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -24,7 +24,7 @@ header h1 {
     color: #d9dcd6;
 }
 
-header nav {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,7 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
-    list-style-type: none;
-}
-
-header nav ul li {
+li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -57,80 +53,50 @@ a {
     background-position: center;
 }
 /*hero style end*/
+
 /*content style start*/
+
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
 p {
     font-size: 16px;
 }
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-    float: right;
-}
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+
+.float-left {
     float: left;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-    float: right;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-    float:left;
     margin-right: 25px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-    float:right;
+.float-right {
+    float: right;
     margin-left: 25px;
 }
 
-.social-media-marketing img {
+.horiseon-tools {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.horiseon-tools img {
     max-height: 200px;
-    float:left;
-    margin-right: 25px;
 }
 
-.search-engine-optimization h2 {
+.horiseon-tools h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/*content style ends*/
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/*content style end*/
-
-/*benefit style start*/
+/*benefits style starts*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -140,12 +106,11 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    margin-bottom: 32px;
-    color: #ffffff;
 }
 
 .benefit-lead {
-    
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
 .benefit-brand {
@@ -190,17 +155,17 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-/*benefit style end*/
+/*benefit style ends*/
 
-/*footer style start*/
-footer {
+/*footer style starts*/
+.footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-footer h2 {
+.footer h2 {
     font-size: 20px;
 }
-/*footer style end*/
+/*footer style ends*/
