--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,6 @@ h1 {
     font-size: 48px;
 }
 
-.seo {
-    color: #d9dcd6;
-}
-
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -62,10 +58,19 @@ a {
     margin-left: 20px;
 }
 
-p {
-    font-size: 16px;
+
+.content-tools {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
+.content-tools img {
+    max-height: 200px;
+}
 .float-left {
     float: left;
     margin-right: 25px;
@@ -75,25 +80,13 @@ p {
     float: right;
     margin-left: 25px;
 }
-
-.horiseon-tools {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.horiseon-tools img {
-    max-height: 200px;
-}
-
-.horiseon-tools h2{
+.content-tools h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+p {
+    font-size: 16px;
+}
 /*content style ends*/
 
 /*benefits style starts*/
@@ -122,7 +115,6 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
 /*benefit style ends*/
 
 /*footer style starts*/
